; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_new_channel.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_new_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel = type { i32 }
%struct.channel_box = type { %struct.channel* }
%struct.TYPE_3__ = type { i8*, i32* }

@.str = private unnamed_addr constant [19 x i8] c"new channel failed\00", align 1
@METANAME = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"read\00", align 1
@lread = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [6 x i8] c"write\00", align 1
@lwrite = common dso_local global i32* null, align 8
@.str.3 = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@lrelease = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.channel* (i32*, %struct.channel*)* @new_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.channel* @new_channel(i32* %0, %struct.channel* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.channel*, align 8
  %5 = alloca %struct.channel_box*, align 8
  %6 = alloca [3 x %struct.TYPE_3__], align 16
  store i32* %0, i32** %3, align 8
  store %struct.channel* %1, %struct.channel** %4, align 8
  %7 = load %struct.channel*, %struct.channel** %4, align 8
  %8 = icmp eq %struct.channel* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = call %struct.channel* (...) @channel_new()
  store %struct.channel* %10, %struct.channel** %4, align 8
  br label %14

11:                                               ; preds = %2
  %12 = load %struct.channel*, %struct.channel** %4, align 8
  %13 = call %struct.channel* @channel_connect(%struct.channel* %12)
  store %struct.channel* %13, %struct.channel** %4, align 8
  br label %14

14:                                               ; preds = %11, %9
  %15 = load %struct.channel*, %struct.channel** %4, align 8
  %16 = icmp eq %struct.channel* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @luaL_error(i32* %18, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %20

20:                                               ; preds = %17, %14
  %21 = load i32*, i32** %3, align 8
  %22 = call %struct.channel_box* @lua_newuserdata(i32* %21, i32 8)
  store %struct.channel_box* %22, %struct.channel_box** %5, align 8
  %23 = load %struct.channel*, %struct.channel** %4, align 8
  %24 = load %struct.channel_box*, %struct.channel_box** %5, align 8
  %25 = getelementptr inbounds %struct.channel_box, %struct.channel_box* %24, i32 0, i32 0
  store %struct.channel* %23, %struct.channel** %25, align 8
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* @METANAME, align 4
  %28 = call i64 @luaL_newmetatable(i32* %26, i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %52

30:                                               ; preds = %20
  %31 = getelementptr inbounds [3 x %struct.TYPE_3__], [3 x %struct.TYPE_3__]* %6, i64 0, i64 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %32, align 16
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %34 = load i32*, i32** @lread, align 8
  store i32* %34, i32** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i64 1
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8** %36, align 16
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 1
  %38 = load i32*, i32** @lwrite, align 8
  store i32* %38, i32** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i64 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  store i8* null, i8** %40, align 16
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  store i32* null, i32** %41, align 8
  %42 = load i32*, i32** %3, align 8
  %43 = getelementptr inbounds [3 x %struct.TYPE_3__], [3 x %struct.TYPE_3__]* %6, i64 0, i64 0
  %44 = call i32 @luaL_newlib(i32* %42, %struct.TYPE_3__* %43)
  %45 = load i32*, i32** %3, align 8
  %46 = call i32 @lua_setfield(i32* %45, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %47 = load i32*, i32** %3, align 8
  %48 = load i32, i32* @lrelease, align 4
  %49 = call i32 @lua_pushcfunction(i32* %47, i32 %48)
  %50 = load i32*, i32** %3, align 8
  %51 = call i32 @lua_setfield(i32* %50, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  br label %52

52:                                               ; preds = %30, %20
  %53 = load i32*, i32** %3, align 8
  %54 = call i32 @lua_setmetatable(i32* %53, i32 -2)
  %55 = load %struct.channel*, %struct.channel** %4, align 8
  ret %struct.channel* %55
}

declare dso_local %struct.channel* @channel_new(...) #1

declare dso_local %struct.channel* @channel_connect(%struct.channel*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local %struct.channel_box* @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i32) #1

declare dso_local i32 @luaL_newlib(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
